# arxiv-recommendation-public

./: README.md  pyproject.toml
api/: latest.json  metadata.json  schema.json
src/arxiv_recommendation_mcp/: __init__.py  dataset.py  server.py
tests/: test_dataset.py
