[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-recommendation-public"
version = "0.1.0"
description = "Stdio MCP server for the public arXiv recommendation dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
]

[project.scripts]
arxiv-recommendation-mcp = "arxiv_recommendation_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_recommendation_mcp"]
